<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <!-- Top Layer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">
        <!-- TopLayer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">
                <!-- 추가 버튼-->
                <Button
                    android:id="@+id/mainlist_btn_add_list"
                    style="@style/txt_16_005cb9"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginRight="@dimen/dp_20"
                    android:background="@drawable/selector_bg_click_event"
                    android:gravity="center"
                    android:text="+"
                    android:textColor="@drawable/selector_txt_click_event" />
                <!-- 데이터 초기화 버튼-->
                <Button
                    android:id="@+id/mainlist_init_alldata"
                    style="@style/txt_13_127de4"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:background="@drawable/selector_bg_click_event"
                    android:gravity="center"
                    android:text="기록\n초기화"
                    android:textColor="@drawable/selector_txt_click_event" />
            </LinearLayout>


            <!-- 오늘의 목표금액 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <TextView
                    style="@style/txt_16_000000_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="5"
                    android:gravity="right"
                    android:text="@string/daily_one_day" />

                <TextView
                    android:id="@+id/mainlist_tv_today_use_amount"
                    style="@style/txt_16_000000_bold"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="left" />
            </LinearLayout>
`

            <!-- 오늘의 잔여금액 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_vertical">

                <TextView
                    style="@style/txt_14_1e1e1e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_weight="5"
                    android:gravity="right"
                    android:text="@string/after_one_day" />

                <TextView
                    android:id="@+id/mainlist_tv_remaining_amount_of_today"
                    style="@style/txt_14_1e1e1e_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="left" />
            </LinearLayout>

            <!-- 목표날짜(D day)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/txt_16_3a3a3a_type2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/target_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mainlist_tv_target_date"
                        style="@style/txt_16_005cb9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp_15"
                        android:padding="@dimen/dp_5"
                        android:text="0000"
                        android:background="@drawable/selector_bg_click_event"
                        android:textColor="@drawable/selector_txt_click_event" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/txt_16_000000_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_10"
                            android:text="@string/d_day_count" />

                        <TextView
                            android:id="@+id/mainlist_tv_dday"
                            style="@style/txt_16_000000_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="00" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <!-- 목표사용금액 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/txt_16_3a3a3a_type2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/target_amount" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="left">

                    <TextView
                        android:id="@+id/mainlist_tv_target_amount"
                        style="@style/txt_16_005cb9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_click_event"
                        android:padding="@dimen/dp_5"
                        android:text="0"
                        android:textColor="@drawable/selector_txt_click_event" />
                </LinearLayout>
            </LinearLayout>


            <!-- 현재 총 잔여금 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mainlist_btn_remaining_amount_show_hide"
                    style="@style/txt_10_798ba0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:layout_weight="8"
                    android:text="show"
                    android:visibility="gone" />

                <TextView
                    style="@style/txt_16_3a3a3a_type2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/rest_amount" />

                <TextView
                    android:id="@+id/mainlist_tv_rest_amount"
                    style="@style/txt_16_000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="0" />
            </LinearLayout>


            <!-- 음영 라인 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_4"
                    android:layout_gravity="bottom"
                    android:background="@drawable/grad_st_ffffff_en_66127de4_ang_90"
                    android:orientation="vertical"/>
            </LinearLayout>
        </LinearLayout><!-- TopLayer -->
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Body Layer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_top"
        app:layout_constraintWidth_percent="1">
        <!-- BodyLayer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">
            <!-- 하단 레이아웃 -->
            <!-- 아이템 리스트 -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainlist_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@+id/ll_line"
                app:layout_constraintWidth_percent="1" />
        </LinearLayout><!-- BodyLayer -->
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>